[package]
name = "rich"
version = "0.1.0"
authors = ["yin <wuyin@outlook.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
log = "0.4"

ron = "0.6.4"
serde = "1.0.117"
winit = "0.22"
futures = "0.3"
bevy_ecs = "0.5"
bevy_app = "0.5"
wgpu = "0.8"

assets = { path = "src/library/assets" }
render = { path = "src/library/render" }
game = { path = "src/game" }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"