[package]
name = "rich"
version = "0.1.0"
edition = "2021"

[dependencies]
game = { path = "game" }
editor = { path = "editor", optional = true }

[workspace]
resolver = "2"
members = [
    "game",
    "editor",
    "tool/hashtool",
    "tool/hashtoolbin",
    "third/bevy_prototype_debug_lines"
]

[features]
default = ["build_editor", "debug"]
build_editor = ["game/build_editor", "editor"]
debug = ["game/debug"]