[package]
name = "game"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
bevy = { version = "0.6.0", features = ["jpeg"] }
quick-protobuf = "0.8.0"
anyhow = "1.0.52"
approx = "0.4"
serde = "1.0"
rand = "0.8"
itertools = "0.10.3"
ron = { version = "0.7.0" }
bvh = { path = "../third/bvh" }
hashtool = { path = "../tool/hashtool", default-features = false }
bevy_prototype_debug_lines = { path = "../third/bevy_prototype_debug_lines", features = ["3d"], optional = true }
futures-lite = "1.12.0"


[build-dependencies]
anyhow = "1.0.52"

[features]
build_editor = []
debug = ["hashtool/save_reverse_hash", "bevy_prototype_debug_lines"]